[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "setec-tester-programs"
version = "1.8.2"
description = "SETEC product test programs."
authors = [
    {name = "Stephen Bell", email = "stephen.bell@setec.com.au"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "attrs",
    "jsonrpclib-pelix",
    "pydispatcher",
    "pyserial",
    "setec-isplpc==1.*",
    "setec-libtester==1.*",
    "setec-tester==1.*",
    "setec-updi==1.*",
    "setec-utility[erp]==1.*",
]

[tool.setuptools.packages.find]
include = ["programs*", "share*"]
